--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,14 @@ a{
     border: 1px solid #D2DFD4;
     width: calc(33.33% - 12px);
     padding: 30px;
+    transition: transform .2s; /* Animation */
+}
+.contact_card:hover{
+    cursor: pointer;
+
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
 }
 .contact_card_heading {
     font-size: 24px;
@@ -869,8 +877,12 @@ body {
     color: var(--green);
     width: 24px !important;
     height: 20px !important;
+}.collections_products:hover{
+    color: white;
 }
-
+.collections_products{
+    color: white;
+}
 .container1 {
     max-width: 1460px;
     margin: 0 auto;
