--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,10 @@ body {
 .row {
     margin: 0;
 }
-
+.numeric{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 .section_padding {
     padding: 100px 0;
 }
@@ -196,7 +199,7 @@ a{
 }
 .message_field {
     resize: none;
-    max-height: 150px;
+    max-height: 226px;
 }
 .career-img-container {
     height: 562px;
@@ -441,6 +444,19 @@ a{
     top: 85%;
     right:40px;
     z-index: 555;
+    cursor: pointer;
+    transition: all 0.7s;
+}
+.back:hover .back-top{
+    color: var(--green);
+    transition: all 0.7s;
+
+}
+.back:hover {
+    transition: all 0.7s;
+
+    background-color: white;
+    border:  solid 1px var(--green);
 }
   .horizontal-line {
     border-bottom: 1px solid var(--grey-color);
@@ -489,7 +505,7 @@ a{
   }
   .kalsari1-img { 
     position: absolute;
-    right: 6%;
+    right: 2%;
   }
 
   .Kalsaria-text p{
@@ -499,7 +515,7 @@ a{
     margin-top: 50px;
   }
   .Kalsaria-title h2{
-    font-size: 36px;
+    font-size: 34px;
     color: var(--green);
     line-height: 54px;
     font-weight: 600;
@@ -551,7 +567,7 @@ a{
         padding: 60px 0px;
     }
     .heading_container {
-        padding: 0px 0 30px 0;
+     margin-bottom: 30px !important;
     }
     .form_field_container div.col {
         padding: 0px 6px;
@@ -659,7 +675,7 @@ a{
         margin: 20px 0 0 0;
     }
     .heading_container {
-        padding: 0px 0 20px 0;
+       margin-bottom: 20px !important;
     }
     .image_container {
         padding: 0px;
@@ -697,11 +713,9 @@ a{
       } 
 }
 .heading_description{
-    margin-top: 30px;
+    margin-top: 25px;
 }
-.heading_container{
-    margin-bottom: 50px;
-}
+
 /* benefit */
 .benefit {
     background-image: url('../images/home/1ec68b5abe8305e0a800b77561d2922d.png');
@@ -998,7 +1012,8 @@ body {
     gap: 20px;
 }
 .border-About{
-    border: 2px solid #F5F5F5;
+    padding-bottom: 20px;
+    border-bottom:  2px solid #F5F5F5;
 }
 .About-des p {
     margin-bottom: 0;
@@ -1445,6 +1460,10 @@ body {
     z-index: 5;
     box-shadow: 2px 2px 6px  0  #c3bdbd ;
 }
+.about-cout{
+    display: flex;
+    gap: 30px !important;
+}
 .Global-box{
     gap: 30px;
 }
@@ -1586,9 +1605,13 @@ body {
        margin-top: 30px !important;
        gap: 20px !important;
     }
+    
     .heading_description{
         font-size: 14px;
         line-height: 21px;
+    }
+    .count-card{
+        width: 47%;
     }
     .Revitalize-card{ 
         width: 100% !important;
@@ -1599,7 +1622,7 @@ body {
     .count{
         font-weight: 400;
         line-height: 45px;
-        font-size: 30px;
+        font-size: 16px;
     }
     .copy-right-footer div p{
         font-size: 16px;
@@ -1617,7 +1640,7 @@ body {
         gap: 0;
     }
     .heading_container{
-        margin-bottom: 0px;
+        margin-bottom: 0px ;
     }
     .heading_description{
         margin-top: 20px;
@@ -1832,11 +1855,17 @@ body {
     color: #414141;
  }
 .cout{
+    font-size: 16px !important;
     width: 100%;
    border-radius: 10px;
-   margin-top: 8px;
-   margin-bottom: 8px;
    height: 145px;
+}
+.numeric{
+    padding-top: 40px ;
+    padding-bottom: 40px;
+}
+.about-cout{
+    gap: 16px !important;
 }
 .Global-Excellence-title-main{
     padding-right: 0px;
@@ -1855,7 +1884,14 @@ body {
     height: 92px !important;
 }
 .befor-img{
-    top: 78%;
+    top: 70%;
+    display: flex;
+    justify-content: end;
+
+}
+.befor-img img{
+   width: 58%;
+
 }
 .Kalsaria-title h2{
     font-size: 25px;
@@ -1888,6 +1924,7 @@ body {
     width: 100%;
 }
 .cout-sab span{
+    text-align: center;
     margin-top: 16px;
     font-size: 16px;
     line-height: 24px;
@@ -2135,6 +2172,9 @@ body {
         padding-top: 15px !important;
         padding-bottom: 15px !important;
     }
+    .kalsari1-img img {
+        width: 79px !important;
+    }
 }
 @media(min-width:768px) {
     .container1{
@@ -2150,6 +2190,9 @@ body {
     }
     .products-icon i{
         font-size: 20px;
+    }
+    .kalsari1-img img{
+        width: 110px ;
     }
     .Lubricants-products{
         justify-content: center !important;
@@ -2178,8 +2221,15 @@ body {
         font-weight: 600;
         color: #3A7A43;
     }
+    .kalsari1-img img {
+        width: 100px !important;
+    }
     .img-set{
-        top: 1% !important;
+        top: 2% !important;
+        width: 30%;
+      }
+      .img-set img{
+        width: 200px !important;
       }
     .products{
         width: 338px !important;
@@ -2337,7 +2387,7 @@ body {
         height: 92px !important;
     }
       .befor-img{
-          top: 62%;
+          top: 51%;
       }
       .Kalsaria-title-text{
         margin: 0 !important;
@@ -2401,9 +2451,6 @@ body {
         padding-top: 60px;
         padding-bottom: 60px;
     }
-    .main-heading{
-        margin-bottom: 50px;
-    }
     .image_with_form_container{
         margin-top: 50px !important;
     }
@@ -2420,6 +2467,9 @@ body {
     }
     .logo-lg img {
         width: 210px;
+    }
+    .cout{
+      width: 471px;
     }
     .About-img img {
         width: 1000px;
@@ -2500,7 +2550,10 @@ body {
         left: 84% !important;
     }
     .img-set img {
-        width: 14%;
+        width: 11%;
+    }
+    .heading_container{
+        margin-bottom: 50px !important;
     }
 }
 
@@ -2665,6 +2718,9 @@ body {
      .about-main{
         gap: 0;
      }
+     .kalsari1-img{
+        right: 15%;
+     }
      .about-description p{
         font-size: 17px;
      }
@@ -2721,6 +2777,9 @@ body {
     }
     .product-icon .icon{
         width: 180px !important;
+    }
+    .befor-img {
+        top: 23%;
     }
      
 }
@@ -2989,3 +3048,28 @@ body {
     transition: all 0.5s ;
 }
 /* product_details_End */
+/* industrial hero Start */
+.industrial{
+    background-color: #1E5F28;
+    height: 500px;
+    z-index: -1;
+    background-image: url("../images/industrial/industrial-hero.png");
+}
+.industrial-sab{
+    margin-top: 70px;
+    margin-bottom: 70px;
+    gap: 30px;
+}
+.industrial-images{
+    width: 360px;
+}
+.industrial-images-circle{
+    width: 364px;
+}
+.industrial-text{
+    width: 346px;
+}
+.industrial-height{
+    height: 360px;
+}
+/* industrial hero End */
